Changelog for Products.LDAPMultiplugins
=======================================

To see earlier changes please see HISTORY.txt.

1.7 (unreleased)
----------------


1.6 (2008-06-05)
----------------

- Bug: ActiveDirectoryMultiPlugin.enumerateGroups: In order to support
  group searches on the binary objectGUID attribute, utilize a new
  flag exposed by the LDAPUserFolder LDAPDelegate search method
  that prevents the customary UTF8-encoding of the search filter
  expression. **NOTE**: With this change the LDAPUserFolder version
  dependency changes to version 2.9 or higher!
  (http://www.dataflake.org/tracker/issue_00576 by Wichert Akkerman)

- Bug: ActiveDirectoryMultiPlugin.enumerateGroups: If the requested group
  id is a binary string, like a objectGUID attribute, it was mangled
  by a lowercasing operation. Removed the lowercasing.
  (http://www.dataflake.org/tracker/issue_00575 by Wichert Akkerman)

- Feature: Added caching to the getGroupsForPrincipal method. Thanks to 
  Wichert Akkerman for the patch.
  (http://www.dataflake.org/tracker/issue_00571)


1.5 (2007-06-13)
----------------

- Bug: The product will no longer silently fail to install if the 
  LDAPUserFolder package is not installed. Silent failure does
  not look like a good strategy here.

- Bug: fixes and import cleanups after running Pyflakes
  (http://divmod.org:81/svn/Divmod/trunk/Pyflakes/)

- Documentation: added some additional configuration hints to the README, 
  thanks go to Brett Lentz (http://www.dataflake.org/tracker/issue_00559)
